<resources>
    <string name="app_name">InstacartQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to Instacart Quiz!</string>
    <string name="take_quiz">Let\'s take a Quiz now!</string>
    <string name="quiz_time">Quiz Time!</string>
    <string name="select_text">Please select the correct answer:</string>
    <string name="correct_answer_selected_msg">Congratulations! You have selected correct answer! Would you like to try again?</string>
    <string name="wrong_answer_selected_msg">Nope, You are wrong! Would you like to try again?</string>
    <string name="try_again_answer_yes">Yes!</string>
    <string name="try_again_answer_no">No</string>
    <string name="error">We experience some issues with network. Please try again later</string>
</resources>
