<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/quiz_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/timer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="0"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/quiz_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/select_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_title" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold|italic"
        android:text="Pineapple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_question" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_name">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/first_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/second_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_button"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/third_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/second_button"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/fourth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/third_button"/>

        </RelativeLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/end_dialog"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/wrong_answer_selected_msg"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/success_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/correct_answer_selected_msg"
            android:visibility="gone"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/try_again_answer_yes"
            android:layout_alignParentBottom="true"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/try_again_answer_no"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>